--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
+    "angular-cli": "^1.0.0-beta.28.3",
     "chart.js": "^3.5.1",
     "crypto-js": "^4.1.1",
     "express": "^4.17.1",
@@ -45,7 +46,8 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.3.2"
+    "typescript": "~4.3.2",
+    "webpack": "^5.76.2"
   },
   "engines": {
     "node": "14.x",
