--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "crypto-js": "^4.1.1",
     "express": "^4.17.1",
     "i": "^0.3.7",
+    "jquery": "^3.6.4",
     "ngx-toastr": "^14.2.1",
     "npm": "^8.3.0",
     "path": "^0.12.7",
@@ -39,6 +40,7 @@
     "@angular/cli": "^12.2.10",
     "@types/crypto-js": "^4.0.2",
     "@types/jasmine": "~3.8.0",
+    "@types/jquery": "^3.5.16",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
