--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
+    "@popperjs/core": "^2.11.6",
     "angular-cli": "^1.0.0-beta.28.3",
+    "bootstrap": "^5.2.3",
     "chart.js": "^3.5.1",
     "crypto-js": "^4.1.1",
     "express": "^4.17.1",
