--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^12.1.5",
-    "@angular/cli": "^12.2.10",
     "@angular/common": "~12.1.0",
     "@angular/compiler": "~12.1.0",
     "@angular/compiler-cli": "^12.2.12",
@@ -35,6 +34,7 @@
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "typescript": "~4.3.2",
+    "webpack": "^5.76.3",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -50,8 +50,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.3.2",
-    "webpack": "^5.76.2"
+    "typescript": "~4.3.2"
   },
   "engines": {
     "node": "14.x",
