--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/compiler-cli": "^12.2.12",
     "@angular/core": "~12.1.0",
     "@angular/forms": "~12.1.0",
+    "@angular/material": "^16.0.1",
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
@@ -28,10 +29,12 @@
     "express": "^4.17.1",
     "i": "^0.3.7",
     "jquery": "^3.6.4",
+    "mdb-angular-ui-kit": "^4.1.0",
     "ngx-toastr": "^14.2.1",
     "npm": "^8.3.0",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.7.5",
     "tslib": "^2.2.0",
     "typescript": "~4.3.2",
     "webpack": "^5.76.3",
