--- a/package.json
+++ b/package.json
@@ -11,49 +11,55 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.1.5",
-    "@angular/common": "~12.1.0",
-    "@angular/compiler": "~12.1.0",
-    "@angular/compiler-cli": "^12.2.12",
-    "@angular/core": "~12.1.0",
-    "@angular/forms": "~12.1.0",
-    "@angular/material": "^16.0.1",
-    "@angular/platform-browser": "~12.1.0",
-    "@angular/platform-browser-dynamic": "~12.1.0",
-    "@angular/router": "~12.1.0",
+    "@angular/animations": "^15.0.0",
+    "@angular/cdk": "^15.2.9",
+    "@angular/common": "^15.0.0",
+    "@angular/compiler": "^15.0.0",
+    "@angular/compiler-cli": "^15.0.0",
+    "@angular/core": "^15.0.0",
+    "@angular/forms": "^15.0.0",
+    "@angular/material": "^15.2.9",
+    "@angular/platform-browser": "^15.0.0",
+    "@angular/platform-browser-dynamic": "^15.0.0",
+    "@angular/router": "^15.0.0",
     "@popperjs/core": "^2.11.6",
     "angular-cli": "^1.0.0-beta.28.3",
-    "bootstrap": "^5.2.3",
-    "chart.js": "^3.5.1",
+    "angular-tabler-icons": "^2.7.0",
+    "bootstrap": "^5.3.0",
+    "chart.js": "^4.3.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "crypto-js": "^4.1.1",
     "express": "^4.17.1",
     "i": "^0.3.7",
-    "jquery": "^3.6.4",
+    "jquery": "^3.7.0",
     "mdb-angular-ui-kit": "^4.1.0",
-    "ngx-toastr": "^14.2.1",
+    "ngx-toastr": "^15.0.0",
     "npm": "^8.3.0",
     "path": "^0.12.7",
-    "rxjs": "~6.6.0",
-    "sweetalert2": "^11.7.5",
-    "tslib": "^2.2.0",
-    "typescript": "~4.3.2",
+    "rxjs": "~7.5.0",
+    "sweetalert2": "^11.7.10",
+    "tslib": "^2.5.3",
     "webpack": "^5.76.3",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.1.4",
-    "@angular/cli": "^12.2.10",
+    "@angular-devkit/build-angular": "^15.0.5",
+    "@angular/cli": "~15.0.5",
+    "@angular/compiler-cli": "^15.0.0",
     "@types/crypto-js": "^4.0.2",
-    "@types/jasmine": "~3.8.0",
+    "@types/file-saver": "^2.0.5",
+    "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.16",
     "@types/node": "^12.11.1",
-    "jasmine-core": "~3.8.0",
-    "karma": "~6.3.0",
+    "css-loader": "^6.8.1",
+    "jasmine-core": "~4.5.0",
+    "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.3.2"
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "mini-css-extract-plugin": "^2.7.6",
+    "typescript": "~4.8.2"
   },
   "engines": {
     "node": "14.x",
