--- a/package.json
+++ b/package.json
@@ -23,16 +23,19 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@popperjs/core": "^2.11.6",
+    "@types/datatables.net": "^1.10.24",
     "angular-cli": "^1.0.0-beta.28.3",
     "angular-tabler-icons": "^2.7.0",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.0",
     "chartjs-plugin-datalabels": "^2.2.0",
     "crypto-js": "^4.1.1",
+    "datatables.net": "^1.13.4",
     "express": "^4.17.1",
     "i": "^0.3.7",
     "jquery": "^3.7.0",
     "mdb-angular-ui-kit": "^4.1.0",
+    "ng-zorro-antd": "^16.0.0",
     "ngx-toastr": "^15.0.0",
     "npm": "^8.3.0",
     "path": "^0.12.7",
